# libtorch-sample

./: .gitignore  CMakeLists.txt  License  README.md  main.cpp  main.py
libtorch/: build-hash  build-version
libtorch/include/caffe2/core/: macros.h
